k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gradient-path
  namespace: apps
  labels:
    app: gradient-path
spec:
  type: ClusterIP
  selector:
    app: gradient-path
  ports:
    - name: http
      port: 80
      targetPort: http
